WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253939
Fix container selection for container units in pseudo elements
https://bugs.webkit.org/show_bug.cgi?id=253939
Summary
Fix container selection for container units in pseudo elements
Tim Nguyen (:ntim)
Reported
2023-03-14 23:27:46 PDT
https://wpt.fyi/results/css/css-contain/container-queries?label=master&label=experimental&product=chrome&product=firefox&product=safari&aligned&view=interop&q=label%3Ainterop-2023-container%20pseudo-elements
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-14 23:27:57 PDT
<
rdar://problem/106739553
>
Antti Koivisto
Comment 2
2023-08-23 10:46:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16982
EWS
Comment 3
2023-08-23 13:06:24 PDT
Committed
267197@main
(508ac946574e): <
https://commits.webkit.org/267197@main
> Reviewed commits have been landed. Closing PR #16982 and removing active labels.
Tim Nguyen (:ntim)
Comment 4
2023-08-28 12:07:37 PDT
***
Bug 260462
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug