Fix container selection for container units in pseudo elements https://bugs.webkit.org/show_bug.cgi?id=253939 rdar://106739553

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/pseudo-elements-006-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/pseudo-elements-007-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/pseudo-elements-008-expected.txt:
* Source/WebCore/css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::computeNonCalcLengthDouble):

Tell the container selection algorithm that we selecting for a pseudo-element.

Canonical link: https://commits.webkit.org/267197@main